fix(accordion): allow title and/or content to be wrapped or having in between html elements

--- a/src/definitions/modules/accordion.less
+++ b/src/definitions/modules/accordion.less
@@ -45,11 +45,16 @@
 }
 
 /* Default Styling */
+.ui.accordion:not(.styled) :not(.ui) > .content,
+.ui.accordion:not(.styled) :not(.ui) > :not(.ui) > .content,
+.ui.accordion:not(.styled) .accordion :not(.ui) > .content,
+.ui.accordion:not(.styled) .accordion :not(.ui) > :not(.ui) > .content,
 .ui.accordion:not(.styled) .title ~ .content:not(.ui),
 .ui.accordion:not(.styled) .accordion .title ~ .content:not(.ui) {
   margin: @contentMargin;
   padding: @contentPadding;
 }
+.ui.accordion:not(.styled) :not(.ui) > .content:last-child,
 .ui.accordion:not(.styled) .title ~ .content:not(.ui):last-child {
   padding-bottom: 0;
 }
@@ -139,8 +144,12 @@
 
 
   /* Content */
-  .ui.styled.accordion .content,
-  .ui.styled.accordion .accordion .content {
+  .ui.styled.accordion :not(.ui) > .content,
+  .ui.styled.accordion :not(.ui) > :not(.ui) > .content,
+  .ui.styled.accordion .accordion :not(.ui) > .content,
+  .ui.styled.accordion .accordion :not(.ui) > :not(.ui) > .content,
+  .ui.styled.accordion .title ~ .content,
+  .ui.styled.accordion .accordion .title ~ .content {
     margin: @styledContentMargin;
     padding: @styledContentPadding;
   }
@@ -185,6 +194,9 @@
    Not Active
 ---------------*/
 
+.ui.accordion :not(.ui) > .content:not(.active),
+.ui.accordion :not(.ui) > :not(.ui) > .content:not(.active),
+.ui.accordion .accordion :not(.ui) > :not(.ui) > .content:not(.active),
 .ui.accordion .title ~ .content:not(.active),
 .ui.accordion .accordion .title ~ .content:not(.active) {
   display: none;
